<resources>
    <string name="app_name">VinylRecords</string>
    <string name="add_an_album_header">Add an album</string>
    <string name="add_an_album_prompt_for_title">Enter album title</string>
    <string name="add_an_album_prompt_for_artist">Enter artist</string>
    <string name="add_an_album_prompt_for_genre">Enter Genre</string>
    <string name="add_an_album_prompt_for_description">Enter Description</string>
    <string name="add_an_album_prompt_for_release_date">Enter Release Date</string>
    <string name="add_an_album_prompt_for_cover_img">Enter url to album cover image</string>
    <string name="add_an_album_prompt_for_quantity">Enter stock quantity</string>


    <string name="update_an_album_header">Update an album</string>
    <string name="delete_an_album_header">Delete an album</string>

    <string name="add_an_album_btn_txt">Add album</string>
    <string name="update_an_album_btn_txt">Update album</string>
    <string name="delete_an_album_btn_txt">Delete album</string>

    <string name="add_a_new_album_speakable_text">Add a new album</string>
    <string name="update_an_album_speakable_text">Update an existing album</string>

    <string name="add_album_speakable_text">Add Album</string>

    <string name="display_of_listed_albums_speakable_text">Display of listed albums</string>
    <string name="go_back_to_previous_screen_speakable_text">Go back to previous screen</string>
    <string name="vinyl_records_header_text">Vinyl Records</string>

</resources>