<?xml version="1.0" encoding="utf-8"?>

<!-- TODO: Limit size of edit text fields -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name = "album"
            type = "com.northcoders.vinylrecords.model.Album"/>

        <variable
            name = "clickHandler"
            type = "com.northcoders.vinylrecords.ui.addalbum.AddAlbumClickHandlers"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addalbum.AddNewAlbumActivity">


        <!-- Header -->
        <TextView
            android:id="@+id/editAddAlbumHeader"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/add_an_album_header"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@color/header"
            android:layout_marginBottom="40dp"
            android:paddingTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Album title -->
        <EditText
            android:id="@+id/editAlbumTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_an_album_prompt_for_title"
            android:text="@={album.title}"
            android:textColor="@color/edit_text"
            android:textColorHint="@color/prompt_hint"
            android:inputType="text"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAddAlbumHeader"
            app:layout_constraintVertical_chainStyle="packed"
            android:minHeight="60dp"/>

        <!-- Artist -->
        <EditText
            android:id="@+id/editAlbumArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_an_album_prompt_for_artist"
            android:text="@={album.artist}"
            android:textColor="@color/edit_text"
            android:textColorHint="@color/prompt_hint"
            android:inputType="text"
            android:layout_marginBottom="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editAlbumTitle"
            app:layout_constraintVertical_chainStyle="packed"
            android:minHeight="60dp"/>

        <!-- Genre -->
        <EditText
            android:id="@+id/editAlbumGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_an_album_prompt_for_genre"
            android:text="@={album.genre}"
            android:textColor="@color/edit_text"
            android:textColorHint="@color/prompt_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editAlbumArtist"
            app:layout_constraintVertical_chainStyle="packed"
            android:minHeight="60dp"/>

        <!-- Description -->
        <!-- TODO: Multi line/scrollable textbox -->
        <EditText
            android:id="@+id/editAlbumDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_an_album_prompt_for_description"
            android:text="@={album.description}"
            android:textColor="@color/edit_text"
            android:textColorHint="@color/prompt_hint"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editAlbumGenre"
            app:layout_constraintVertical_chainStyle="packed"
            android:minHeight="60dp"/>


        <!-- Release Date -->
        <!-- TODO: Change to some date picker ui -->
        <EditText
            android:id="@+id/editReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_an_album_prompt_for_release_date"
            android:text="@={album.releaseDate}"
            android:textColor="@color/edit_text"
            android:textColorHint="@color/prompt_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editAlbumDescription"
            app:layout_constraintVertical_chainStyle="packed"
            android:minHeight="60dp"/>

        <!-- Album Cover Img Url -->
        <EditText
            android:id="@+id/editAlbumCoverImgUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_an_album_prompt_for_cover_img"
            android:text="@={album.coverImg}"
            android:textColor="@color/edit_text"
            android:textColorHint="@color/prompt_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editReleaseDate"
            app:layout_constraintVertical_chainStyle="packed"
            android:minHeight="60dp"/>

        <!-- Stock Quantity -->
        <!-- TODO: Any other ui component? -->
        <EditText
            android:id="@+id/editSockQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_an_album_prompt_for_quantity"
            android:text=" @={`` + album.stockQuantity}"
            android:textColor="@color/edit_text"
            android:textColorHint="@color/prompt_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editAlbumCoverImgUrl"
            app:layout_constraintVertical_chainStyle="packed"
            android:minHeight="60dp"/>


        <!--            android:layout_width="160dp"-->
        <!--            android:layout_height="110dp"-->
        <!--        android:width="100dp"-->
        <!--        android:height="50dp"-->

        <!-- TODO: colour of button when selected, add shadow so get 3 d look -->
        <!--        android:background="@drawable/button_selector"-->
        <!--        android:background="@color/btn_add_album"-->
        <!--        android:textColorHighlight="white"-->
        <!--        android:shadowColor="white"-->
        <!-- Could use a FloatingActionButton for add? -->
        <!-- TODO: Decide on whether to use Button or FAButton for add.  For now keeping both -->
        <Button
            android:id="@+id/btnAddAlbum"
            android:onClick="@{clickHandler::onAddBtnClickec}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:shape="rectangle"
            android:text="@string/add_an_album_btn_txt"
            android:textColor="@color/white"
            android:background="@drawable/button_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editSockQuantity"/>

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/btnBack"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="16dp"-->
<!--            android:layout_marginStart="16dp"-->

        <!-- Go backwards icon -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/faBtnGoBack"
            android:onClick="@{clickHandler::onGoBackBtnClicked}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_add_circle_24"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/faBtnAddAlbum"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Add Album icon -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/faBtnAddAlbum"
            android:onClick="@{clickHandler::onAddBtnClickec}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_add_circle_24"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>